--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,10 @@ if(NOT CMAKE_GENERATOR STREQUAL "Xcode")
 		message (FATAL_ERROR "OpenMP support is required")
 	endif(OPENMP_FOUND)
 else(NOT CMAKE_GENERATOR STREQUAL "Xcode")
+	if(CMAKE_C_COMPILER_ID MATCHES "Clang")
+		message (FATAL_ERROR "Clang compiler detected. GCC must be used because OpenMP is required.")
+	endif(CMAKE_C_COMPILER_ID MATCHES "Clang")
+
 	if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
 		message(WARNING "XCode compilers as of XCode 4.2.1 on OS X Lion 10.7.2 contain known bugs making OpenMP code intermittantly unstable. If \"Abort trap: 6\" errors are encountered, please recompile using the Cmake makefile generator.")
 	endif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
@@ -101,7 +105,7 @@ if (GIT_VERSION)
 	add_definitions("-D SS_BUILD_VERSION='\"${GIT_VERSION}\"'")
 else (GIT_VERSION)
 	message(WARNING "SEAStAR version not detected from git. ${GIT_VERSION}") 
-	set(GIT_VERSION "v0.4.14")
+	set(GIT_VERSION "v0.4.15")
 	add_definitions("-D SS_BUILD_VERSION='\"${GIT_VERSION}\"'")
 endif (GIT_VERSION)
 
